[workspace]
members = ["crates/xecrypt", "crates/xenon_types"]
resolver = "2"

[workspace.package]
version = "0.0.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
byteorder = "1.5.0"
bitflags = "2.0"
insta = "1"
sha-1 = "0.10"
num_enum = "0.7"
base64 = "0.22"
fskit = "0.1"
vfs = "0.12"
async-trait = "0.1"
futures = "0.3"
jiff = "0.2"

[package]
name = "gxcrypt"
version = "0.0.1"
edition = "2021"

[lib]
name = "gxcrypt"
path = "src/mod.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
crc32fast = "1.4"
zerocopy = { version = "0.8.3", features = ["derive"] }
byteorder = "1.5.0"
sha1 = "0.10"
rsa = "0.9.10"
xecrypt = { path = "./crates/xecrypt" }

[dev-dependencies]
rand = "0.8"
